homework-5/files/manifests/ingress-homework-5.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: students-app
  namespace: homework-5
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: students-app
                port:
                  number: 7777
            pathType: Prefix
            path: /
